--- a/main.tex
+++ b/main.tex
@@ -6,13 +6,14 @@
 
 \input{tex/preamble}
 
-\includeonly{tex/reconstruction}
+\includeonly{tex/unfolding}
 
 \addbibresource{bib/experiment.bib}
 \addbibresource{bib/simulation.bib}
 \addbibresource{bib/objects.bib}
 \addbibresource{bib/selection.bib}
 \addbibresource{bib/reconstruction.bib}
+\addbibresource{bib/unfolding.bib}
  
 \begin{document} 
 
@@ -36,10 +37,11 @@
 \include{tex/objects}
 \include{tex/selection}
 \include{tex/reconstruction}
+\include{tex/unfolding}
 
 \appendix
 
-\include{tex/appendix.tex}
+\include{tex/appendix}
 
 \clearpage
 
