--- a/tex/simulation.tex
+++ b/tex/simulation.tex
@@ -236,7 +236,8 @@ total transverse momentum.
 The color connection with the beam remnants that are not
 interacting is also simulated with phenomenological models.
 
-\section{Generators}\label{sec:generators}
+\section{Generators}
+\label{sec:generators}
 
 Generators are classified as either {\it multi-purpose}
 generators, capable of performing the full simulation chain described
