--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -42,13 +42,18 @@
 \newcommand{\ccbar}      {\mbox{$c\bar{c}$}}
 \newcommand{\ssbar}      {\mbox{$s\bar{s}$}}
 \newcommand{\ttbar}      {\mbox{$t\bar{t}$}}
+\newcommand{\ppbar}      {\mbox{$p\bar{p}$}}
 \newcommand{\bbbar}      {\mbox{$b\bar{b}$}}
+\newcommand{\qqbar}      {\mbox{$q\bar{q}$}}
+\newcommand{\uubar}      {\mbox{$u\bar{u}$}}
+\newcommand{\ddbar}      {\mbox{$d\bar{d}$}}
 \newcommand{\pttt}     {\mbox{$p_{t\bar{t}}$}}
 \newcommand{\mtt}     {\mbox{$m_{t\bar{t}}$}}
 \newcommand{\ytt}     {\mbox{$y_{t\bar{t}}$}}
 \newcommand{\betatt}     {\mbox{$\beta_{z,t\bar{t}}$}}
 \newcommand{\dy}     {\mbox{$\Delta|y|$}}
 \newcommand{\ac}     {\mbox{$A_C$}}
+\newcommand{\afb}     {\mbox{$A_{FB}$}}
 \newcommand{\ljets}      {\mbox{$\ell$+jets}}
 \newcommand{\ejets}      {\mbox{$e$+jets}}
 \newcommand{\mujets}     {\mbox{$\mu$+jets}}
@@ -93,7 +98,9 @@
 \newcommand{\Tsup}{\ensuremath{T\urcorner{}}}
 \newcommand{\seventev}{\ensuremath{\sqrt{s}=7\TeV{}}}
 \newcommand{\eighttev}{\ensuremath{\sqrt{s}=8\TeV{}}}
-
+\newcommand{\lagr}{\mathcal{L}}
+\newcommand{\renormscale}{\ensuremath{\mu_R^2}}
+\newcommand{\factscale}{\ensuremath{\mu_F^2}}
 
 \def\MeV{\; \mathrm{MeV}}
 \def\GeV{\; \mathrm{GeV}}
