--- a/tex/theory.tex
+++ b/tex/theory.tex
@@ -1,27 +1,371 @@
 \chapter{Theory}
 \label{sec:theory}
 
-
 \section{The Standard Model}
 \label{sec:theSM}
 
-\section{The Top Quark}
+The Standard Model (SM) is a quantum field theory describing the
+interactions between the elementary constituents of matter through the
+fundamental forces.
+The elementary particles, three leptons, three neutrinos and six
+quarks, are fermions categorized in three families. For each particle
+there exist an antiparticle with same mass and opposite quantum
+numbers for a total of 24 particles.
+All particles carry a weak charge and interact with
+the weak force carriers $W$ and $Z$. All of the particles, except for
+neutrinos, are electrically charged and interact with the
+electromagnetic force, mediated by $\gamma$. Only the quarks have a
+color charge and undergo strong force interactions with {\it gluons}.  
+Table~\ref{tab:smparticles} shows the elementary particles and
+the fundamental force carriers of the Standard Model.
+
+\begin{table}[!htb]\centering
+  \begin{tabular}{ l c c c c c}
+    \toprule
+    \multicolumn{5}{c}{Matter} & Force carriers \\
+    \midrule
+                                       & Electric Charge & Family 1 &
+                                       Family 2 & Family 3 &  \\
+                                       \multirow{2}*{quarks} & $+2/3$
+                                       & $u$ & $c$ & $t$ & $\gamma$ \\
+                                       & $-1/3$ & $d$ & $s$ & $b$ &
+                                       $W^{\pm}$ \\
+                                       \multirow{2}*{leptons} & $-1$
+                                       & $e$ & $\mu$ & $\tau$ & $Z$ \\
+                                       & $0$ & $\nu_e$ & $\nu_{\mu}$ & $\nu_{\tau}$ &
+                                       $g$ \\
+    \bottomrule
+  \end{tabular}
+  \caption[Table of particles and forces in the Standard Model]{Table of
+    particles and forces in the Standard Model}
+  \label{tab:smparticles}
+\end{table}
+
+The theory describing the particle interactions is structured
+according to the gauge group $SU(3)_C\times{}SU(2)_L\times{}U(1)_Y$. The three
+terms represent the fundamental symmetries corresponding to the forces describing the
+interaction of particles: $SU(3)_C$ is the {\it color} ($C$) symmetry corresponding
+to the strong force; $SU(2)_L\times{}U(1)_Y$ is the spontaneously
+broken symmetry with respect to the {\it isospin} ($L$)
+and {\it hypercharge} ($Y$) gauge groups.
+The SM is then the combination of two theories: the {\it Quantum
+  Chromodynamics} (QCD) lagrangian, which describes the strong
+interaction arising from the $SU(3)$ color symmetry, and the {\it
+  Electroweak} lagrangian, which accounts for the electroweak
+interactions corresponding to the $SU(2)\times{}U(1)$ isospin and
+hypercharge symmetries.
+\begin{equation}
+\lagr{}_{SM} = \lagr{}_{SU(3)} + \lagr{}_{SU(2)\times{}U(1)}
+= \lagr{}_{SU(3)}^{Gauge} + \lagr{}_{SU(3)}^{Matter} 
++ \lagr{}_{SU(2)\times{}U(1)}^{Gauge} + \lagr{}_{SU(2)\times{}U(1)}^{Matter}
++ \lagr{}_{SU(2)\times{}U(1)}^{Higgs} +
+\lagr{}_{SU(2)\times{}U(1)}^{Yukawa}
+\phantom{.}
+\end{equation}
+The $\lagr{}^{Gauge}$ terms describe the dynamics of the gauge fields:
+the gluons in QCD, and the $W$, $Z$ and $\gamma$ boson in the
+electroweak theory. The $\lagr{}^{Matter}$ terms describe the
+interaction of particles with the gauge fields.
+
+\section{The top quark}
 \label{sec:topquark}
 
-\subsection{Top Quark Production at the LHC}
+The top quark was discovered in 1995 at the Tevatron by the
+CDF~\cite{topcdf} and \dzero{}~\cite{topd0} collaborations. With a
+mass of ???\cite{topmass} it is the heaviest elementary particle
+observed so far.
+
+\subsection{Pair production at hadron colliders}
 \label{sec:topprod}
 
-\subsection{Top Quark Decay}
+At hadron colliders, top quarks are mainly produced in pairs through QCD
+processes. Interactions between the parton constituents of the
+colliding hadrons (protons or antiprotons) participate in a hard
+scattering process and produce a top quark and an antitop quark. The
+leading production modes are: {\it gluon--gluon fusion} and {\it
+  quark--antiquark annihilation}. The leading order Feynman diagrams
+for these two processes are shown in Fig.~\ref{fig:ttbarprod}. The
+following discussion focus on the top quark pair production in proton
+collisions, however similar considerations apply to the case of
+proton-antiproton collisions.
+
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.495\textwidth]{figures/theory/}
+  \caption{Leading order diagrams for QCD top quark pair production
+    via gluon--gluon fusion (top) and quark--antiquark annihilation (bottom).}
+  \label{fig:ttbarprod}
+\end{figure}
+
+Due to the composite nature of protons, most of the
+collisions involve only soft (i.e. long distance) interactions of the
+constituent quarks and gluons. Such interactions cannot be described
+with perturbative QCD, because $\alpha_s$ is large due to the small
+momentum exchange. In some collisions, however, in addition to the
+long distance parton interactions, two quarks or two gluons undergo a
+hard (i.e. short distance) scattering where a top quark pair is produced.
+The {\it factorization principle}~\cite{factorprinciple} states that
+the perturbative QCD description of this hard process is possible by
+factorizing the long distance effects into functions $f$ describing the
+proton structure. Thus the cross section for top quark pair
+production in a collision of two protons with momenta $P_1$ and $P_2$
+can be written as: 
+\begin{equation}
+  \sigma(p(P_1)+p(P_2)\to\ttbar{}+{\rm X})
+  = 
+  \int_0^1{\rm d}x_1
+  ~\int_0^1{\rm d}x_2
+  ~\sum_f~ f_f(x_1) f_f(x_2)
+  \cdot{}\hat{\sigma}(q_f(x_1P_1)+\bar{q}_f(x_2P_2)\to\ttbar{}+{\rm
+    X})
+  \phantom{,}
+  \label{eq:ttbarxs}
+\end{equation}
+where the sum runs over all type of partons, and $x_{1,2}$ are the
+fractions of proton momentum carried by the constituents participating
+in the hard interaction. 
+
+The {\it parton distribution functions} (PDFs) $f_f(x,\factscale{})$
+represent the probability density for a parton of a type $i$ to carry
+a fraction of hadron momentum $x$. The {\it factorization scale}
+\factscale{} is set arbitrarily and defines the distinction between
+short and long distance interactions based on the transferred momentum
+$Q^2$. An additional renormalization scale \renormscale{} accounts for higher
+order corrections. For calculations and simulations, both scales are
+set to the typical transferred momentum of the process studied. In the case of
+\ttbar{} production the scale is chosen to be equal to the top mass $m_t$.
+  
+The PDFs cannot be computed in perturbation theory; instead, they are
+measured in deep inelastic scattering experiments and at hadron colliders.
+For the measurements presented in this thesis, the PDF estimations
+provided by the CTEQ~\cite{cteq}, MSTW~\cite{mstw}, CT10~\cite{ct10}
+and NNPDF~\cite{nnpdf} collaborations are used. Fig.~\ref{fig:pdfs}
+shows the PDFs of valence quarks, gluons and sea quarks for two values
+of transferred momentum $Q^2$ at which the proton is probed. 
+
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.495\textwidth]{figures/theory/mstw2008nnlo68cl_allpdfs}
+  \caption{MSTW parton distribution functions~\cite{ct10} for gluons
+    and quarks at $Q^2=10\GeV{}$ (left) and $Q^2=10\TeV{}$ (right).}
+  \label{fig:pdfs}
+\end{figure}
+
+The typical fraction of momentum $x$ carried by each of the colliding
+partons in order to produce a top quark pair is defined by the
+relationship
+\begin{equation}
+\sqrt{x_1x_2s}\geq{}2m_t\phantom{.}
+\end{equation}
+Therefore, assuming the partons carry a similar fraction of momentum
+$x_1\simeq{}x_2\simeq{}x$:
+\begin{equation}
+x=\frac{2m_t}{\sqrt{s}}
+\phantom{.}
+\end{equation}
+This corresponds to a typical value of $x\approx{}0.05$ at the LHC for
+a center-of-mass energy \seventev{} and \eighttev{}. As shown in
+Fig.~\ref{fig:pdfs} the probability of gluon collisions is
+significantly larger than for any other parton in the corresponding
+range of $x$. Thus the production of top quark pairs at the LHC is
+dominated by the gluon fusion process ($\approx{}90\%$). On the
+contrary, at the Tevatron, the typical value of $x\approx{}0.2$ makes
+the valence quark-antiquark annihilation the prevalent \ttbar{}
+production mode.
+
+The total \ttbar{} production cross section at the LHC is calculated
+at next-to-next-to leading order in
+QCD~\cite{ttxs1,ttxs2,ttxs3,ttxs4,ttxs5,ttxs6,ttxs7} to be
+$177.31^{+10.1}_{-10.8}$ pb at \seventev{} and
+$252.89^{+13.30}_{-14.52}$ pb at \eighttev{}, for a top quark mass of
+$172.5 \GeV{}$. Measurements have been performed by both ATLAS and CMS
+collaborations, yielding a combine value of $173.3\pm10.1$ pb at
+\seventev{}~\cite{ATLAS-CONF-2012-134,CMS-PAS-TOP-12-003}. Preliminary
+measurements at \eighttev{} yield $\sigma_{\ttbar{}}=242\pm{}9$ pb
+(ATLAS)~\cite{Aad:2014kva} and $\sigma_{\ttbar{}}=239\pm{}13$ pb
+(CMS)~\cite{Chatrchyan:2013faa}. All measurements are in agreement
+with the SM predictions above.
+
+\subsection{Decay}
 \label{sec:topdecay}
 
-\subsection{Top Properties}
+The top quark has an extremely short lifetime, $5\times{}10^{-25}$
+s, therefore hadronization does not take place and the decay products
+carry the whole information about 4--momentum and spin of the original
+particle.
+The top quark decays in almost all cases via electroweak
+charged current interaction into a $b$ quark and a $W$ boson, which
+decays either leptonically, into a charged lepton and the corresponding
+antineutrino, or hadronically into a quark--antiquark pair. Thus the
+final states corresponding to a \ttbar{} pair can be classified in
+three categories, based on the decays of the two $W$ bosons
+originating from the decays of the top and the antitop quarks:
+\begin{itemize}
+\item Full hadronic final state: both $W$ bosons decay into quarks,
+  leading to a \ttbar{} final state with six quarks.
+\item Semileptonic final state: one $W$ boson decays into quarks,
+  while the other decays leptonically, leading to a final state with
+  four quarks, one lepton and one neutrino.
+\item Dileptonic final state: both $W$ bosons decay leptonically,
+  leading to a final state with two $b$ quarks, two leptons and two
+  neutrinos. 
+\end{itemize}
+Given that the $W$ boson hadronic branching ratio is
+$\approx{}2/3$, the full hadronic and semileptonic final states occur
+$4$ out of $9$ times each, while the dileptonic decay has the
+remaining $1/9$ probability.  
+
+\subsection{Properties}
 \label{sec:topdecay}
+
+The properties of the top quark have been studied in details at hadron
+collider experiments. The combination of Tevatron and LHC results
+brought the precision on the top mass measurement well below $1 \GeV{}$
+with $m_t=173.3\pm{}0.8 \GeV{}$~\cite{topmass}.
+An exotic electric charge of $4e/3$ for the top quark, for which the
+SM predicts a $2e/3$ charge, has been excluded by measurements at both
+Tevatron experiments~\cite{Abazov:2006vd,Aaltonen:2010js} and at the
+ATLAS experiment~\cite{Aad:2013uza}.
+Since the top quark does not form bound hadronic states due to its
+small lifetime, it provides the unique opportunity to measure quark
+properties that are usually concealed by hadronization. The final state
+particles in the decay carry information about the top quark spin,
+therefore, it's possible to measure the top polarization and the spin
+correlation of the top quark pair. At the current precision, these
+quantities have been found to be compatible with the SM predictions.
+
 
 \section{Charge Asymmetry in Top Quark Pair Production}
 \label{sec:topca}
 
-\subsection{QCD Charge Asymmetry}
+Most of the measurements of the top quark properties are compatible
+with SM predictions, a notable exception is the {\it forward-backward}
+(FB) asymmetry in the production of \ttbar{} pairs in \ppbar{}
+collisions at the Tevatron. 
+The asymmetry \afb{} is defined in terms of the rapidity $y$ of the top and
+antitop quarks in the laboratory frame\footnote{The rapidity of a
+  particle at colliders is given by $y=\frac{1}{2}log\frac{E+p_z}{E-p_z}$, where
+  $E$ is the energy of the particle and $p_z$ the component of its
+  momentum along the beam axis $z$.}: 
+\begin{equation}
+\label{eq:afb}
+\afb{}=\frac{N(\Delta{}y>0)-N(\Delta{}y<0)}{N(\Delta{}y>0)+N(\Delta{}y<0)}
+\phantom{,}
+\end{equation}
+with $\Delta{}y=y_t - y_{\bar{t}}$ and $N$ number of events.
+At present, when the full Tevatron dataset has been analyzed, the
+discrepancies have been reduced with respect to previous results. The
+CDF collaboration reports a $1.7\sigma$ excess over the SM
+prediction~\cite{Aaltonen:2012it}, whereas the \dzero{} collaboration
+finds agreement within $1\sigma$~\cite{Abazov:2014cca}.
+
+At the time when this thesis work began, a discrepancy between
+experimental data and the SM prediction over three standard deviations
+was found in a CDF measurement of \afb{} at high \ttbar{} invariant
+mass $\mtt{}>450\GeV{}$, using half of the total dataset. This anomaly
+motivated intense research in model building -- invoking new physics
+in \ttbar{} production as the explanation for the anomaly -- as well
+as the update of the SM calculations. Since then, it also fostered the
+theoretical and experimental search of other anomalies in \ttbar{}
+production, which might appear if the Tevatron asymmetry were indeed a
+sign of new physics. Among the latter, the charge asymmetry at the LHC
+has a prominent role. in $pp$ collisions a FB asymmetry with a fixed
+$z$ axis, such as the one defined in Eq.~\ref{eq:afb}, vanishes due to
+the symmetry of the initial state. However a {\it forward-central} charge
+asymmetry \ac{} can be defined, 
+\begin{equation}
+\label{eq:ac}
+\ac{}=\frac{N(\Delta{}|y|>0)-N(\Delta{}|y|<0)}{N(\Delta{}|y|>0)+N(\Delta{}|y|<0)}
+\phantom{,}
+\end{equation}
+with $\Delta{}|y|=|y_t| - |y_{\bar{t}}|$, which is a complementary
+probe of asymmetric \ttbar{} production.
+
+\subsection{SM Charge Asymmetry}
 \label{sec:qcdca}
+
+The dominant contribution to the SM charge asymmetry originates from
+the QCD $\qqbar{}\to\ttbar{}+X$ production. Specifically, it originates from the
+interference between the Born amplitude for $\qqbar{}\to\ttbar{}$ and
+its one--loop box correction, and the one between initial and final
+state radiation (ISR, FSR) in $\qqbar{}\to{}\ttbar{}g$
+(Fig.~\ref{fig:asymdiagrams}). The terms of the angular differential cross section
+$d\sigma_{\qqbar{}\to{}\ttbar{}}/\mathrm{d}cos\theta$ (where $\theta$
+is the angle between the outgoing top quark and the incoming quark)
+corresponding to these interferences are antisymmetric for the
+exchange of top and antitop quark momenta~\ref{Kuhn:1998kw}. In
+particular, considering the definitions in Eq.~\ref{eq:afb}
+and~\ref{eq:ac}, Born-box interference generates a positive asymmetry,
+while the ISR-FSR interference generates a negative asymmetry.
+The relative size of the two contributions depends on the transverse
+momentum of the \ttbar{} system \pttt{}. For
+$\pttt{}\lesssim{}25\GeV{}$ the asymmetry is positive, while for
+$\pttt{}\gtrsim{}25\GeV{}$ is negative. The overall effect is a
+positive asymmetry.
+\begin{figure}[!htb]
+  \centering
+  \subfloat[][]
+  {  \includegraphics[width=0.495\textwidth]{figures/theory/born} } \quad
+  \subfloat[][]
+  {  \includegraphics[width=0.495\textwidth]{figures/theory/box} } \\
+  \subfloat[][]
+  {  \includegraphics[width=0.495\textwidth]{figures/theory/isr} } \quad
+  \subfloat[][]
+  {  \includegraphics[width=0.495\textwidth]{figures/theory/fsr} } 
+  \caption{Main sources of the QCD charge asymmetry in \ttbar{}
+    production: interference of Born (a) and box (b) diagrams and
+    interference of initial state (c) and final state (d) gluon
+    radiation diagrams}
+  \label{fig:asymdiagrams}
+\end{figure}
+
+Charge asymmetric contributions also arise from the interference of
+the QCD $\qqbar{}\to{}\ttbar{}$ diagrams in
+Fig.~\ref{fig:asymdiagrams} with the QED analogous where a gluon is
+replaced by a photon. The size of the QED corrections to the QCD
+asymmetric cross section depend on the relative importance of \uubar{}
+and \ddbar{} annihilations, due to the difference in electric charge.
+At \ppbar{} collisions (Tevatron) the QED contribution is estimated to
+be $\approx{}18\%$, while at LHC $pp$ collisions, with larger relative
+\ddbar{} importance, it accounts for approximately $13\%$ of the
+asymmetry~\cite{Kuhn:2011ri}.
+Analogous contributions from weak interactions, where a $Z$ boson is
+replaced to the photon, constitute a $\approx{}1\%$ correction at
+Tevatron and are negligible at LHC due to the smallness of the
+weak coupling.
+
+The asymmetry definition in Eq.~\ref{eq:afb} and~\ref{eq:ac} can be
+generalized as the ratio between the asymmetric contribution
+$\sigma_A$ to the cross section and the symmetric one $\sigma_S$:
+\begin{equation}
+  A_{QCD} = \frac{\sigma_A}{\sigma_S} = 
+  \frac{\alpha_S^3\sigma_A^{(1)}+\alpha_S^4\sigma_A^{(2)}+\cdots{}}
+  {\alpha_S^2\sigma_S^{(0)}+\alpha_S^3\sigma_S^{(1)}+\cdots{}}
+\end{equation}
+Because the asymmetry vanishes at the tree level in the SM, a
+consistent fixed-order expansion at LO in perturbation theory involves the
+numerator at NLO and the denominator at LO:
+\begin{equation}
+  \alpha_SA_{QCD}^{(0)}=\frac{\alpha_S\sigma_A^{(1)}}{\sigma_S^{(0)}}
+\end{equation}
+Predictions of \afb{} for Tevatron and \ac{} for LHC have thus been
+computed including the $\mathcal{0}(\alpha_s^3)$
+QCD contribution and the mixed $\mathcal{0}(\alpha_s^2\alpha)$ QCD-QED
+and QCD-weak corrections discussed above. The SM forward-backward
+asymmetry at \ppbar{} collision, evaluated at $\sqrt{s}=1.96\TeV{}$,
+is $\afb{} = 0.088\pm{}0.006$, while the SM predictions for the LHC
+asymmetry are, at \seventev{} and \eighttev{} respectively,
+$\ac{}=0.0123\pm{}0.0005$ and
+$\ac{}=0.0111\pm0.0005$~\cite{Bernreuther:2012sx}. 
+The SM prediction for \ac{} is one order of magnitude smaller than for
+\afb{} because of two effects. First, the symmetric $gg\to\ttbar{}+X$
+process is dominant at the LHC, accounting for $80\%$ of the total
+cross section, as opposed to the $15\%$ at the Tevatron. This process
+contributes exclusively to the denominator in Eq.~\ref{eq:afb}
+and~\ref{eq:ac}, diluting the asymmetric $\qqbar{}\to\ttbar{}$
+production. In addition, the probability that the anti-quark carries a
+larger fraction of momentum than the quark -- in which case the
+assumption that the \ttbar{} system is boosted in the direction of the
+incoming quark is voided -- is not negligible, and leads to a further
+dilution of the asymmetry.  
 
 \subsection{BSM Charge Asymmetry}
 \label{sec:qcdca}
