move PDF references in theory chapter

--- a/tex/selection.tex
+++ b/tex/selection.tex
@@ -146,9 +146,9 @@ prediction in each scenario. In the following the different choices
 for each process are listed.
 
 The \ttbar{}+jets process is simulated using the \alpgen{} generator
-with the {\tt CTEQ6L1} PDF set~\cite{cteq6}, interfaced to the 
+with the {\tt CTEQ6L1} PDF set, interfaced to the 
 \herwig{} parton shower (2011) and using \powheg{} with the {\tt CT10}
-PDF set~\cite{ct10}, interfaced to the \pythia{} parton shower
+PDF set, interfaced to the \pythia{} parton shower
 (2012).
 
 Simulated samples of $W/Z$ boson production are generated with up to
@@ -173,7 +173,7 @@ interfaced with the \herwig{} parton shower (2011) and \powheg{}
 interfaced with \pythia{} (2012), using the {\tt CT10} PDF set.
 The simulation of $t$-channel single top quark production is
 generated with the {\tt ACERMC} LO generator with the {\tt MRST LO**}
-PDF set~\cite{mrst}  (2011) and \powheg{} interfaced with \pythia{}
+PDF set (2011) and \powheg{} interfaced with \pythia{}
 with the {\tt CT10} PDF set (2012). Single top samples are normalized
 to the corresponding NLO cross sections~\cite{stschan,sttchan,stwt}.
 Finally, the boson pair production is modelled using \herwig{} with
