complete first draft theory chapter

--- a/bib/theory.bib
+++ b/bib/theory.bib
@@ -49,7 +49,7 @@
 }
 
 @article{ttxs3,
-      author         = "Bärnreuther, Peter and Czakon, Michal and Mitov,
+      author         = "B{"a}rnreuther, Peter and Czakon, Michal and Mitov,
                         Alexander",
       title          = "{Percent Level Precision Physics at the Tevatron: First
                         Genuine NNLO QCD Corrections to $q \bar{q} \to t \bar{t} +
@@ -99,9 +99,9 @@
 }
 
 @article{ttxs6,
-      author         = "Czakon, Michał and Fiedler, Paul and Mitov, Alexander",
+      author         = "Czakon, Michal and Fiedler, Paul and Mitov, Alexander",
       title          = "{Total Top-Quark Pair-Production Cross Section at Hadron
-                        Colliders Through $O(α\frac{4}{S})$}",
+                        Colliders Through $O(\alpha\frac{4}{S})$}",
       journal        = "Phys.Rev.Lett.",
       number         = "25",
       volume         = "110",
@@ -327,4 +327,259 @@
       primaryClass   = "hep-ph",
       reportNumber   = "TTK-12-19",
       SLACcitation   = "%%CITATION = ARXIV:1205.6580;%%",
+}
+
+@article{Aguilar-Saavedra:2014kpa,
+      author         = "Aguilar-Saavedra, J.A. and Amidei, D. and Juste, A. and
+                        Perez-Victoria, M.",
+      title          = "{Asymmetries in top quark pair production}",
+      year           = "2014",
+      eprint         = "1406.1798",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2014-101",
+      SLACcitation   = "%%CITATION = ARXIV:1406.1798;%%",
+}
+
+@article{Aad:2012tfa,
+      author         = "Aad, Georges and others",
+      title          = "{Observation of a new particle in the search for the
+                        Standard Model Higgs boson with the ATLAS detector at the
+                        LHC}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B716",
+      pages          = "1-29",
+      doi            = "10.1016/j.physletb.2012.08.020",
+      year           = "2012",
+      eprint         = "1207.7214",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2012-218",
+      SLACcitation   = "%%CITATION = ARXIV:1207.7214;%%",
+}
+
+@article{Chatrchyan:2012ufa,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Observation of a new boson at a mass of 125 GeV with the
+                        CMS experiment at the LHC}",
+      collaboration  = "CMS Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B716",
+      pages          = "30-61",
+      doi            = "10.1016/j.physletb.2012.08.021",
+      year           = "2012",
+      eprint         = "1207.7235",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-HIG-12-028, CERN-PH-EP-2012-220",
+      SLACcitation   = "%%CITATION = ARXIV:1207.7235;%%",
+}
+
+@article{Fiorini:2012fe,
+      author         = "Fiorini, Luca",
+      title          = "{Top-Quark Physics Results From LHC}",
+      year           = "2012",
+      eprint         = "1201.5844",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "ATL-PHYS-PROC-2012-029",
+      SLACcitation   = "%%CITATION = ARXIV:1201.5844;%%",
+}
+
+@article{topcdf,
+      author         = "Abe, F. and others",
+      title          = "{Observation of top quark production in $\bar{p}p$
+                        collisions}",
+      collaboration  = "CDF Collaboration",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "74",
+      pages          = "2626-2631",
+      doi            = "10.1103/PhysRevLett.74.2626",
+      year           = "1995",
+      eprint         = "hep-ex/9503002",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-95-022-E, CDF-PUB-TOP-PUBLIC-3040,
+                        ANL-HEP-PR-95-44",
+      SLACcitation   = "%%CITATION = HEP-EX/9503002;%%",
+}
+
+@article{topdzero,
+      author         = "Abachi, S. and others",
+      title          = "{Search for high mass top quark production in $p\bar{p}$
+                        collisions at $\sqrt{s} = 1.8$ TeV}",
+      collaboration  = "D0 Collaboration",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "74",
+      pages          = "2422-2426",
+      doi            = "10.1103/PhysRevLett.74.2422",
+      year           = "1995",
+      eprint         = "hep-ex/9411001",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-94-354-E, FSU-SCRI-95-48",
+      SLACcitation   = "%%CITATION = HEP-EX/9411001;%%",
+}
+
+@article{cteq6,
+      author         = "Nadolsky, Pavel M. and Lai, Hung-Liang and Cao, Qing-Hong
+                        and Huston, Joey and Pumplin, Jon and others",
+      title          = "{Implications of CTEQ global analysis for collider
+                        observables}",
+      journal        = "Phys.Rev.",
+      volume         = "D78",
+      pages          = "013004",
+      doi            = "10.1103/PhysRevD.78.013004",
+      year           = "2008",
+      eprint         = "0802.0007",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MSUHEP-080125, UCRHEP-T447",
+      SLACcitation   = "%%CITATION = ARXIV:0802.0007;%%",
+}
+
+@article{ct10,
+      author         = "Lai, Hung-Liang and Guzzi, Marco and Huston, Joey and Li,
+                        Zhao and Nadolsky, Pavel M. and others",
+      title          = "{New parton distributions for collider physics}",
+      journal        = "Phys.Rev.",
+      volume         = "D82",
+      pages          = "074024",
+      doi            = "10.1103/PhysRevD.82.074024",
+      year           = "2010",
+      eprint         = "1007.2241",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MSUHEP-100707, SMU-HEP-10-10",
+      SLACcitation   = "%%CITATION = ARXIV:1007.2241;%%",
+}
+
+@article{mrst,
+      author         = "Sherstnev, A. and Thorne, R.S.",
+      title          = "{Parton Distributions for LO Generators}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C55",
+      pages          = "553-575",
+      doi            = "10.1140/epjc/s10052-008-0610-x",
+      year           = "2008",
+      eprint         = "0711.2473",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CAVENDISH-HEP-2007-12",
+      SLACcitation   = "%%CITATION = ARXIV:0711.2473;%%",
+}
+
+@article{mstw,
+      author         = "Martin, A.D. and Stirling, W.J. and Thorne, R.S. and
+                        Watt, G.",
+      title          = "{Uncertainties on alpha(S) in global PDF analyses and
+                        implications for predicted hadronic cross sections}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C64",
+      pages          = "653-680",
+      doi            = "10.1140/epjc/s10052-009-1164-2",
+      year           = "2009",
+      eprint         = "0905.3531",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-09-33, DCPT-09-66, CAVENDISH-HEP-09-06",
+      SLACcitation   = "%%CITATION = ARXIV:0905.3531;%%",
+}
+
+@article{nnpdf,
+      author         = "Ball, Richard D. and others",
+      title          = "{Precision determination of electroweak parameters and
+                        the strange content of the proton from neutrino
+                        deep-inelastic scattering}",
+      collaboration  = "NNPDF Collaboration",
+      journal        = "Nucl.Phys.",
+      volume         = "B823",
+      pages          = "195-233",
+      doi            = "10.1016/j.nuclphysb.2009.08.003",
+      year           = "2009",
+      eprint         = "0906.1958",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "EDINBURGH-2009-06, IFUM-941-FT, FREIBURG-PHENO-09-03",
+      SLACcitation   = "%%CITATION = ARXIV:0906.1958;%%",
+}
+
+@article{Aad:2013ksa,
+      author         = "Aad, Georges and others",
+      title          = "{Measurement of Top Quark Polarization in Top-Antitop
+                        Events from Proton-Proton Collisions at $\sqrt(s)=7$ TeV Using the ATLAS Detector}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "Phys.Rev.Lett.",
+      number         = "23",
+      volume         = "111",
+      pages          = "232002",
+      doi            = "10.1103/PhysRevLett.111.232002",
+      year           = "2013",
+      eprint         = "1307.6511",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2013-101",
+      SLACcitation   = "%%CITATION = ARXIV:1307.6511;%%",
+}
+
+@article{Aad:2014pwa,
+      author         = "Aad, Georges and others",
+      title          = "{Measurements of spin correlation in top-antitop quark
+                        events from proton-proton collisions at $\sqrt{s}=7$ TeV
+                        using the ATLAS detector}",
+      collaboration  = "ATLAS Collaboration",
+      year           = "2014",
+      eprint         = "1407.4314",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-116",
+      SLACcitation   = "%%CITATION = ARXIV:1407.4314;%%",
+}
+
+@article{Chatrchyan:2013wua,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Measurements of $t\bar{t}$ spin correlations and
+                        top-quark polarization using dilepton final states in pp
+                        collisions at $\sqrt{s}$ = 7 TeV}",
+      collaboration  = "CMS Collaboration",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "112",
+      pages          = "182001",
+      doi            = "10.1103/PhysRevLett.112.182001",
+      year           = "2014",
+      eprint         = "1311.3924",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-TOP-13-003, CERN-PH-EP-2013-211",
+      SLACcitation   = "%%CITATION = ARXIV:1311.3924;%%",
+}
+
+@article{AguilarSaavedra:2011cp,
+      author         = "Aguilar-Saavedra, J.A. and Juste, A. and Rubbo, F.",
+      title          = "{Boosting the t tbar charge asymmetry}",
+      journal        = "Phys.Lett.",
+      volume         = "B707",
+      pages          = "92-98",
+      doi            = "10.1016/j.physletb.2011.12.007",
+      year           = "2012",
+      eprint         = "1109.3710",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1109.3710;%%",
+}
+
+@article{AguilarSaavedra:2011hz,
+      author         = "Aguilar-Saavedra, J.A. and Perez-Victoria, M.",
+      title          = "{Asymmetries in t $\bar{t}$ production: LHC versus
+                        Tevatron}",
+      journal        = "Phys.Rev.",
+      volume         = "D84",
+      pages          = "115013",
+      doi            = "10.1103/PhysRevD.84.115013",
+      year           = "2011",
+      eprint         = "1105.4606",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1105.4606;%%",
 }
