--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -19,7 +19,7 @@
 \usepackage{booktabs}
 \usepackage{hhline}
 \usepackage{array}
-\usepackage{subfigure}
+\usepackage{subfig}
 \usepackage{floatflt}
 \usepackage{graphicx}% Include figure files
 \usepackage{dcolumn}% Align table columns on decimal point
@@ -45,8 +45,6 @@
 \newcommand{\ppbar}      {\mbox{$p\bar{p}$}}
 \newcommand{\bbbar}      {\mbox{$b\bar{b}$}}
 \newcommand{\qqbar}      {\mbox{$q\bar{q}$}}
-\newcommand{\uubar}      {\mbox{$u\bar{u}$}}
-\newcommand{\ddbar}      {\mbox{$d\bar{d}$}}
 \newcommand{\pttt}     {\mbox{$p_{t\bar{t}}$}}
 \newcommand{\mtt}     {\mbox{$m_{t\bar{t}}$}}
 \newcommand{\ytt}     {\mbox{$y_{t\bar{t}}$}}
@@ -96,8 +94,8 @@
 \newcommand{\prior}{\ensuremath{\pi{}\left(\Truth{}\right)}}
 \newcommand{\Tinf}{\ensuremath{T\ulcorner{}}}
 \newcommand{\Tsup}{\ensuremath{T\urcorner{}}}
-\newcommand{\seventev}{\ensuremath{\sqrt{s}=7\TeV{}}}
-\newcommand{\eighttev}{\ensuremath{\sqrt{s}=8\TeV{}}}
+\newcommand{\seventev}{\mbox{\ensuremath{\sqrt{s}=7\TeV{}}}}
+\newcommand{\eighttev}{\mbox{\ensuremath{\sqrt{s}=8\TeV{}}}}
 \newcommand{\lagr}{\mathcal{L}}
 \newcommand{\renormscale}{\ensuremath{\mu_R^2}}
 \newcommand{\factscale}{\ensuremath{\mu_F^2}}
