--- a/tex/theory.tex
+++ b/tex/theory.tex
@@ -1,4 +1,4 @@
-\chapter{Theory}
+\chapter{The top charge asymmetry in theory and experiments}
 \label{sec:theory}
 
 \section{The Standard Model}
@@ -7,8 +7,8 @@
 The Standard Model (SM) is a quantum field theory describing the
 interactions between the elementary constituents of matter through the
 fundamental forces.
-The elementary particles, three leptons, three neutrinos and six
-quarks, are fermions categorized in three families. For each particle
+The elementary particles -- three {\it leptons}, three {\it neutrinos} and six
+{\it quarks} -- are fermions categorized in three families. For each particle
 there exist an antiparticle with same mass and opposite quantum
 numbers for a total of 24 particles.
 All particles carry a weak charge and interact with
@@ -20,7 +20,7 @@ Table~\ref{tab:smparticles} shows the elementary particles and
 the fundamental force carriers of the Standard Model.
 
 \begin{table}[!htb]\centering
-  \begin{tabular}{ l c c c c c}
+  \begin{tabular}{ l c c c c|c}
     \toprule
     \multicolumn{5}{c}{Matter} & Force carriers \\
     \midrule
@@ -55,25 +55,82 @@ interaction arising from the $SU(3)$ color symmetry, and the {\it
 interactions corresponding to the $SU(2)\times{}U(1)$ isospin and
 hypercharge symmetries.
 \begin{equation}
-\lagr{}_{SM} = \lagr{}_{SU(3)} + \lagr{}_{SU(2)\times{}U(1)}
-= \lagr{}_{SU(3)}^{Gauge} + \lagr{}_{SU(3)}^{Matter} 
+\begin{split}
+\lagr{}_{SM}  & = \lagr{}_{SU(3)} + \lagr{}_{SU(2)\times{}U(1)} \\
+& = \lagr{}_{SU(3)}^{Gauge} + \lagr{}_{SU(3)}^{Matter} 
 + \lagr{}_{SU(2)\times{}U(1)}^{Gauge} + \lagr{}_{SU(2)\times{}U(1)}^{Matter}
 + \lagr{}_{SU(2)\times{}U(1)}^{Higgs} +
-\lagr{}_{SU(2)\times{}U(1)}^{Yukawa}
+\lagr{}_{SU(2)\times{}U(1)}^{Yukawa} \\
+\end{split}
 \phantom{.}
 \end{equation}
 The $\lagr{}^{Gauge}$ terms describe the dynamics of the gauge fields:
 the gluons in QCD, and the $W$, $Z$ and $\gamma$ boson in the
-electroweak theory. The $\lagr{}^{Matter}$ terms describe the
-interaction of particles with the gauge fields.
+electroweak theory.
+The $\lagr{}^{Matter}$ terms describe the
+interaction of particles with the gauge fields. The $\lagr{}^{Higgs}$
+and $\lagr{}^{Yukawa}$ terms arise from the spontaneous symmetry
+breaking of the $SU(2)\times{}U(1)$ gauge theory via the Higgs
+mechanism, and they are responsible, respectively, for the interaction
+of the Higgs field with the other particles and force carriers, and
+for generating their masses.
+The Higgs field
+%, whose corresponding boson has been discovered at the LHC in
+%2012~\cite{Aad:2012tfa,Chatrchyan:2012ufa} 
+needs to be introduced in
+the $SU(2)\times{}U(1)$ theory in order to account for the
+non-vanishing masses of $W$ and $Z$ bosons and of lepton and quarks.
+The Higgs boson does not interact with the gluon and the photon,
+therefore they are the only two massless particles of the
+SM. Table~\ref{tab:smmasses} summarize the masses of the SM particles.
 
+\begin{table}\centering
+  \begin{tabular}{cccc}\toprule
+    Spin-$1$ & \multirow{2}{*}{mass} & Spin-0 & \multirow{2}{*}{mass}\\
+    gauge bosons & & scalar boson & \\\midrule
+    $\gamma$      & 0  & \multirow{4}{*}{$H$} & \multirow{4}{*}{$\sim 125~\GeV$}                        \\
+    $g$           & 0  & &                        \\
+    $W^{\pm}$ & $ 80.385 \pm 0.015 \GeV$ & &\\
+    $Z$       & $ 91.188 \pm 0.002 \GeV$ & &\\\bottomrule
+  \end{tabular}
+  \begin{tabular}{ccccccc}\toprule
+    Spin-$\tfrac{1}{2}$ &  \multicolumn{2}{c}{\multirow{2}{*}{I generation}}
+    &  \multicolumn{2}{c}{\multirow{2}{*}{II generation}}
+    &  \multicolumn{2}{c}{\multirow{2}{*}{III generation}}\\
+    fermions & & & & & \\\midrule
+    \multirow{2}{*}{leptons} &
+    $\nu_{e}$   & \small{$\sim 0$} &  
+    $\nu_{\mu}$ & \small{$\sim 0$} &  
+    $\nu_{\tau}$ & \small{$\sim 0$} \\
+    &
+    e            & \small{$0.511\MeV$}   &  
+    $\mu$ & \small{$105.7\MeV$} &  
+    $\tau$     & \small{$1.777\GeV$} \\
+    \multirow{2}{*}{quarks} &
+    u & \small{$1.7-3.1\MeV$}         &  
+    c & \small{$1.29^{+0.05}_{-0.11}\GeV$}  &  
+    t & \small{$173.3\pm0.8\GeV$}\\
+    &
+    d & \small{$4.1-5.7\MeV$} &  
+    s & \small{$100^{+30}_{-20}\MeV$} &  
+    b & \small{$4.19^{+0.18}_{-0.06}\GeV$} \\\bottomrule
+  \end{tabular}
+  \caption{Mass values for the elementary particles of the Standard
+    Model, as measured at experiments.\label{tab:smmasses}}
+\end{table}
+ 
 \section{The top quark}
 \label{sec:topquark}
 
 The top quark was discovered in 1995 at the Tevatron by the
-CDF~\cite{topcdf} and \dzero{}~\cite{topd0} collaborations. With a
-mass of ???\cite{topmass} it is the heaviest elementary particle
-observed so far.
+CDF~\cite{topcdf} and \dzero{}~\cite{topdzero} collaborations. With a
+mass of $\approx{}170\GeV{}$ it is the heaviest elementary particle
+observed so far. Its proximity to the electroweak scale suggests that
+the top quark might play a relevant role in new physics
+scenarios. Therefore its production, decay modes and properties have
+been studied in details at the two hadron colliders powerful 
+enough to produce it: the Tevatron, where protons and antiprotons were
+collided (\ppbar{}), and the Large Hadron Collider (LHC), colliding protons.
 
 \subsection{Pair production at hadron colliders}
 \label{sec:topprod}
@@ -85,30 +142,33 @@ scattering process and produce a top quark and an antitop quark. The
 leading production modes are: {\it gluon--gluon fusion} and {\it
   quark--antiquark annihilation}. The leading order Feynman diagrams
 for these two processes are shown in Fig.~\ref{fig:ttbarprod}. The
-following discussion focus on the top quark pair production in proton
+following discussion focuses on the top quark pair production in proton
 collisions, however similar considerations apply to the case of
 proton-antiproton collisions.
 
 \begin{figure}[!htb]\centering
-  \includegraphics[width=0.495\textwidth]{figures/theory/}
-  \caption{Leading order diagrams for QCD top quark pair production
-    via gluon--gluon fusion (top) and quark--antiquark annihilation (bottom).}
+  \includegraphics[width=0.95\textwidth]{figures/theory/ttbarprod}
+  \caption{Leading order diagrams for QCD top quark pair production.
+    Gluon fusion, {\tt a)} and {\tt b)}, is the dominant process at
+    LHC energies, while quark--antiquark annihilation, {\tt c)}, is
+    the dominant one at Tevatron energies~\cite{Fiorini:2012fe}.} 
   \label{fig:ttbarprod}
 \end{figure}
 
-Due to the composite nature of protons, most of the
+Due to the composite nature of the proton, most of the
 collisions involve only soft (i.e. long distance) interactions of the
 constituent quarks and gluons. Such interactions cannot be described
-with perturbative QCD, because $\alpha_s$ is large due to the small
-momentum exchange. In some collisions, however, in addition to the
-long distance parton interactions, two quarks or two gluons undergo a
-hard (i.e. short distance) scattering where a top quark pair is produced.
+with perturbative QCD, because the expansion parameter $\alpha_s$ is
+large for small momentum exchange.
+In some collisions, however, in addition to the long distance parton
+interactions, two quarks or two gluons undergo a hard (i.e. short
+distance) scattering where a top quark pair is produced. 
 The {\it factorization principle}~\cite{factorprinciple} states that
 the perturbative QCD description of this hard process is possible by
 factorizing the long distance effects into functions $f$ describing the
 proton structure. Thus the cross section for top quark pair
 production in a collision of two protons with momenta $P_1$ and $P_2$
-can be written as: 
+is given by: 
 \begin{equation}
   \sigma(p(P_1)+p(P_2)\to\ttbar{}+{\rm X})
   = 
@@ -126,7 +186,7 @@ in the hard interaction.
 
 The {\it parton distribution functions} (PDFs) $f_f(x,\factscale{})$
 represent the probability density for a parton of a type $i$ to carry
-a fraction of hadron momentum $x$. The {\it factorization scale}
+a fraction of proton momentum $x$. The {\it factorization scale}
 \factscale{} is set arbitrarily and defines the distinction between
 short and long distance interactions based on the transferred momentum
 $Q^2$. An additional renormalization scale \renormscale{} accounts for higher
@@ -136,14 +196,14 @@ set to the typical transferred momentum of the process studied. In the case of
   
 The PDFs cannot be computed in perturbation theory; instead, they are
 measured in deep inelastic scattering experiments and at hadron colliders.
-For the measurements presented in this thesis, the PDF estimations
-provided by the CTEQ~\cite{cteq}, MSTW~\cite{mstw}, CT10~\cite{ct10}
+For the studies presented in this thesis, the PDF estimations
+provided by the CTEQ~\cite{cteq6}, MRST~\cite{mrst}, MSTW~\cite{mstw}, CT10~\cite{ct10}
 and NNPDF~\cite{nnpdf} collaborations are used. Fig.~\ref{fig:pdfs}
 shows the PDFs of valence quarks, gluons and sea quarks for two values
 of transferred momentum $Q^2$ at which the proton is probed. 
 
 \begin{figure}[!htb]\centering
-  \includegraphics[width=0.495\textwidth]{figures/theory/mstw2008nnlo68cl_allpdfs}
+  \includegraphics[width=0.75\textwidth]{figures/theory/mstw2008nnlo68cl_allpdfs}
   \caption{MSTW parton distribution functions~\cite{ct10} for gluons
     and quarks at $Q^2=10\GeV{}$ (left) and $Q^2=10\TeV{}$ (right).}
   \label{fig:pdfs}
@@ -163,20 +223,21 @@ x=\frac{2m_t}{\sqrt{s}}
 \end{equation}
 This corresponds to a typical value of $x\approx{}0.05$ at the LHC for
 a center-of-mass energy \seventev{} and \eighttev{}. As shown in
-Fig.~\ref{fig:pdfs} the probability of gluon collisions is
+Fig.~\ref{fig:pdfs}, the probability of gluon collisions is
 significantly larger than for any other parton in the corresponding
 range of $x$. Thus the production of top quark pairs at the LHC is
 dominated by the gluon fusion process ($\approx{}90\%$). On the
 contrary, at the Tevatron, the typical value of $x\approx{}0.2$ makes
 the valence quark-antiquark annihilation the prevalent \ttbar{}
 production mode.
-
 The total \ttbar{} production cross section at the LHC is calculated
 at next-to-next-to leading order in
-QCD~\cite{ttxs1,ttxs2,ttxs3,ttxs4,ttxs5,ttxs6,ttxs7} to be
+QCD to be
 $177.31^{+10.1}_{-10.8}$ pb at \seventev{} and
 $252.89^{+13.30}_{-14.52}$ pb at \eighttev{}, for a top quark mass of
-$172.5 \GeV{}$. Measurements have been performed by both ATLAS and CMS
+$172.5 \GeV{}$~\cite{ttxs1,ttxs2,ttxs3,ttxs4,ttxs5,ttxs6,ttxs7}.
+ 
+Measurements have been performed by both ATLAS and CMS
 collaborations, yielding a combine value of $173.3\pm10.1$ pb at
 \seventev{}~\cite{ATLAS-CONF-2012-134,CMS-PAS-TOP-12-003}. Preliminary
 measurements at \eighttev{} yield $\sigma_{\ttbar{}}=242\pm{}9$ pb
@@ -187,13 +248,13 @@ with the SM predictions above.
 \subsection{Decay}
 \label{sec:topdecay}
 
-The top quark has an extremely short lifetime, $5\times{}10^{-25}$
-s, therefore hadronization does not take place and the decay products
-carry the whole information about 4--momentum and spin of the original
-particle.
+The top quark has an extremely short lifetime of $5\times{}10^{-25}$
+s. Therefore decay occurs before hadronization can take place and the
+decay products carry the whole information about \mbox{4--momentum} and spin
+of the original particle.
 The top quark decays in almost all cases via electroweak
-charged current interaction into a $b$ quark and a $W$ boson, which
-decays either leptonically, into a charged lepton and the corresponding
+charged current interaction into a $b$ quark and a $W$ boson, which,
+in turn, decays either leptonically, into a charged lepton and the corresponding
 antineutrino, or hadronically into a quark--antiquark pair. Thus the
 final states corresponding to a \ttbar{} pair can be classified in
 three categories, based on the decays of the two $W$ bosons
@@ -214,7 +275,7 @@ $4$ out of $9$ times each, while the dileptonic decay has the
 remaining $1/9$ probability.  
 
 \subsection{Properties}
-\label{sec:topdecay}
+\label{sec:topprop}
 
 The properties of the top quark have been studied in details at hadron
 collider experiments. The combination of Tevatron and LHC results
@@ -225,21 +286,24 @@ SM predicts a $2e/3$ charge, has been excluded by measurements at both
 Tevatron experiments~\cite{Abazov:2006vd,Aaltonen:2010js} and at the
 ATLAS experiment~\cite{Aad:2013uza}.
 Since the top quark does not form bound hadronic states due to its
-small lifetime, it provides the unique opportunity to measure quark
-properties that are usually concealed by hadronization. The final state
+short lifetime, it is the only quark whose spin properties, which are usually
+concealed by hadronization, can be measured. The final state
 particles in the decay carry information about the top quark spin,
 therefore, it's possible to measure the top polarization and the spin
 correlation of the top quark pair. At the current precision, these
-quantities have been found to be compatible with the SM predictions.
+quantities have been found to be compatible with the SM
+predictions~\cite{Aad:2013ksa,Aad:2014pwa,Chatrchyan:2013wua}. 
 
-
-\section{Charge Asymmetry in Top Quark Pair Production}
+\section{Charge asymmetry in top quark pair production}
 \label{sec:topca}
 
-Most of the measurements of the top quark properties are compatible
-with SM predictions, a notable exception is the {\it forward-backward}
+The measurements of the top quark properties listed in
+Sec~\ref{sec:topprop} yield results compatible with SM predictions.
+An different trend appeared to follow the {\it forward-backward}
 (FB) asymmetry in the production of \ttbar{} pairs in \ppbar{}
-collisions at the Tevatron. 
+collisions at the Tevatron, The first precise measurements, using half
+of Tevatron dataset, showed large discrepancies between
+data and theory ($\gtrsim 3\sigma$). 
 The asymmetry \afb{} is defined in terms of the rapidity $y$ of the top and
 antitop quarks in the laboratory frame\footnote{The rapidity of a
   particle at colliders is given by $y=\frac{1}{2}log\frac{E+p_z}{E-p_z}$, where
@@ -259,42 +323,76 @@ finds agreement within $1\sigma$~\cite{Abazov:2014cca}.
 
 At the time when this thesis work began, a discrepancy between
 experimental data and the SM prediction over three standard deviations
-was found in a CDF measurement of \afb{} at high \ttbar{} invariant
-mass $\mtt{}>450\GeV{}$, using half of the total dataset. This anomaly
-motivated intense research in model building -- invoking new physics
-in \ttbar{} production as the explanation for the anomaly -- as well
-as the update of the SM calculations. Since then, it also fostered the
-theoretical and experimental search of other anomalies in \ttbar{}
-production, which might appear if the Tevatron asymmetry were indeed a
-sign of new physics. Among the latter, the charge asymmetry at the LHC
-has a prominent role. in $pp$ collisions a FB asymmetry with a fixed
-$z$ axis, such as the one defined in Eq.~\ref{eq:afb}, vanishes due to
-the symmetry of the initial state. However a {\it forward-central} charge
-asymmetry \ac{} can be defined, 
+was reported by the CDF collaboration in the measurement of \afb{} at
+high \ttbar{} invariant mass $\mtt{}>450\GeV{}$, using half of the
+total dataset. This anomaly triggered an intense activity, both in
+developing new physics models which could explain the anomaly in
+\ttbar{} production, and in calculating more precise and accurate SM
+predictions. The result also motivated studies of the \ttbar{}
+production phenomenology aiming at identifying other observables where
+anomalies might appear if the Tevatron asymmetry were indeed a
+sign of new physics. Among these, the charge asymmetry at the LHC is
+one of the best candidates. In $pp$ collisions a FB asymmetry with
+respect to a fixed direction, such as the one defined in
+Eq.~\ref{eq:afb}, vanishes due to the symmetry of the initial state.
+However a {\it forward-central} charge asymmetry \ac{} can be defined, 
 \begin{equation}
 \label{eq:ac}
 \ac{}=\frac{N(\Delta{}|y|>0)-N(\Delta{}|y|<0)}{N(\Delta{}|y|>0)+N(\Delta{}|y|<0)}
 \phantom{,}
 \end{equation}
-with $\Delta{}|y|=|y_t| - |y_{\bar{t}}|$, which is a complementary
-probe of asymmetric \ttbar{} production.
+with $\Delta{}|y|=|y_t| - |y_{\bar{t}}|$.
 
-\subsection{SM Charge Asymmetry}
-\label{sec:qcdca}
+The need for a different observable becomes more clear by considering
+the asymmetry in the distribution of the angle $\theta_t$ between the outgoing
+top quark and the incoming quark (Fig.~\ref{fig:cmdiagram}). This angle
+would be the fundamental observable to measure the charge asymmetry in
+\ttbar{} production, but the direction of the incoming quark is
+not directly accessible at experiments. However, at Tevatron \ppbar{}
+collisions, the quark is provided by the proton with very high
+probability ($\gtrsim{}99\%$ at $\sqrt{s}=1.96\TeV{}$), therefore the
+top quark rapidity $y$ with respect to the proton beam direction can
+be used in Eq.~\ref{eq:afb} to distinguish between {\it forward} and
+{\it backward} production with high efficiency. At LHC $pp$ collisions
+the incoming quark has the same probability to be provided by
+either proton beam, thus the FB asymmetry of Eq.~\ref{eq:afb} vanishes by
+construction. However, valence quarks are more likely to participate
+in the interaction than sea quarks and carry, in average, a larger fraction of
+momentum than sea anti-quarks. Therefore, in the laboratory frame, the
+direction of flight of the \ttbar{} system is likely to be the same as of
+the incoming quark. In this scenario, a forward top quark in
+the \ttbar{} C.M. has in average a larger absolute rapidity $|y|$, in
+the laboratory frame, than the backward antiquark. Thus the asymmetry
+in Eq.~\ref{eq:ac} allows probing the charge asymmetry in \ttbar{}
+production at the LHC.
+
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.495\textwidth]{figures/theory/cmdiagram}
+  \caption{A representation of the $\qqbar{}\to\ttbar{}$ process in the
+    C.M. frame. The top quark $t$ is produced at an angle $\theta_t$
+    with respect to the direction of the incoming quark $q$. For
+    symmetric production the top quark is produced isotropically,
+    while for a positive (negative) asymmetry, positive (negative)
+    values of $\cos\theta_t$ are favored. } 
+  \label{fig:cmdiagram}
+\end{figure}
+
+
+\subsection{SM charge asymmetry}
+\label{sec:smca}
 
 The dominant contribution to the SM charge asymmetry originates from
 the QCD $\qqbar{}\to\ttbar{}+X$ production. Specifically, it originates from the
 interference between the Born amplitude for $\qqbar{}\to\ttbar{}$ and
-its one--loop box correction, and the one between initial and final
+its one--loop box correction, and from the one between initial and final
 state radiation (ISR, FSR) in $\qqbar{}\to{}\ttbar{}g$
 (Fig.~\ref{fig:asymdiagrams}). The terms of the angular differential cross section
-$d\sigma_{\qqbar{}\to{}\ttbar{}}/\mathrm{d}cos\theta$ (where $\theta$
-is the angle between the outgoing top quark and the incoming quark)
+$d\sigma_{\qqbar{}\to{}\ttbar{}}/d\cos\theta_t$ (Fig.~\ref{fig:cmdiagram})
 corresponding to these interferences are antisymmetric for the
-exchange of top and antitop quark momenta~\ref{Kuhn:1998kw}. In
+exchange of top and antitop quark momenta~\cite{Kuhn:1998kw}. In
 particular, considering the definitions in Eq.~\ref{eq:afb}
-and~\ref{eq:ac}, Born-box interference generates a positive asymmetry,
-while the ISR-FSR interference generates a negative asymmetry.
+and~\ref{eq:ac}, Born-box interference generates positive asymmetries,
+while the ISR-FSR interference generates negative asymmetries.
 The relative size of the two contributions depends on the transverse
 momentum of the \ttbar{} system \pttt{}. For
 $\pttt{}\lesssim{}25\GeV{}$ the asymmetry is positive, while for
@@ -303,13 +401,13 @@ positive asymmetry.
 \begin{figure}[!htb]
   \centering
   \subfloat[][]
-  {  \includegraphics[width=0.495\textwidth]{figures/theory/born} } \quad
+  {  \includegraphics[width=0.35\textwidth]{figures/theory/born} } \quad
   \subfloat[][]
-  {  \includegraphics[width=0.495\textwidth]{figures/theory/box} } \\
+  {  \includegraphics[width=0.35\textwidth]{figures/theory/box} } \\
   \subfloat[][]
-  {  \includegraphics[width=0.495\textwidth]{figures/theory/isr} } \quad
+  {  \includegraphics[width=0.35\textwidth]{figures/theory/isr} } \quad
   \subfloat[][]
-  {  \includegraphics[width=0.495\textwidth]{figures/theory/fsr} } 
+  {  \includegraphics[width=0.35\textwidth]{figures/theory/fsr} } 
   \caption{Main sources of the QCD charge asymmetry in \ttbar{}
     production: interference of Born (a) and box (b) diagrams and
     interference of initial state (c) and final state (d) gluon
@@ -328,7 +426,7 @@ be $\approx{}18\%$, while at LHC $pp$ collisions, with larger relative
 \ddbar{} importance, it accounts for approximately $13\%$ of the
 asymmetry~\cite{Kuhn:2011ri}.
 Analogous contributions from weak interactions, where a $Z$ boson is
-replaced to the photon, constitute a $\approx{}1\%$ correction at
+replaced to the photon, constitute only a $\approx{}1\%$ correction at
 Tevatron and are negligible at LHC due to the smallness of the
 weak coupling.
 
@@ -347,14 +445,15 @@ numerator at NLO and the denominator at LO:
   \alpha_SA_{QCD}^{(0)}=\frac{\alpha_S\sigma_A^{(1)}}{\sigma_S^{(0)}}
 \end{equation}
 Predictions of \afb{} for Tevatron and \ac{} for LHC have thus been
-computed including the $\mathcal{0}(\alpha_s^3)$
-QCD contribution and the mixed $\mathcal{0}(\alpha_s^2\alpha)$ QCD-QED
+computed including the $\mathcal{O}(\alpha_s^3)$
+QCD contribution and the mixed $\mathcal{O}(\alpha_s^2\alpha)$ QCD-QED
 and QCD-weak corrections discussed above. The SM forward-backward
 asymmetry at \ppbar{} collision, evaluated at $\sqrt{s}=1.96\TeV{}$,
 is $\afb{} = 0.088\pm{}0.006$, while the SM predictions for the LHC
 asymmetry are, at \seventev{} and \eighttev{} respectively,
 $\ac{}=0.0123\pm{}0.0005$ and
-$\ac{}=0.0111\pm0.0005$~\cite{Bernreuther:2012sx}. 
+$\ac{}=0.0111\pm0.0005$~\cite{Bernreuther:2012sx}.
+ 
 The SM prediction for \ac{} is one order of magnitude smaller than for
 \afb{} because of two effects. First, the symmetric $gg\to\ttbar{}+X$
 process is dominant at the LHC, accounting for $80\%$ of the total
@@ -365,7 +464,88 @@ production. In addition, the probability that the anti-quark carries a
 larger fraction of momentum than the quark -- in which case the
 assumption that the \ttbar{} system is boosted in the direction of the
 incoming quark is voided -- is not negligible, and leads to a further
-dilution of the asymmetry.  
+dilution of the asymmetry. The impact of both
+dilutions can be reduced by applying a minimum requirement on the
+$z$-component of the \ttbar{} system velocity \betatt{}~\cite{AguilarSaavedra:2011cp}. Due to the average momentum imbalance
+between quark and antiquark, in \qqbar{} annihilation the \ttbar{}
+system is often produced with a large longitudinal
+momentum. Fig.~\ref{fig:qqbarfrac} shows how the relative importance
+of the \qqbar{} process increases with \betatt{}.
 
-\subsection{BSM Charge Asymmetry}
-\label{sec:qcdca}
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[width=0.495\textwidth]{figures/theory/qqfrac-beta.png} 
+  \caption{Relative fraction of $\qqbar{}\to\ttbar{}$ events as a function of the
+    minimum \ttbar{} velocity.} 
+  \label{fig:qqbarfrac}
+\end{figure}
+
+\subsection{bSM charge asymmetry}
+\label{sec:bsmca}
+
+An appealing possibility is that the discrepancies between the
+experimental results and the SM predictions for \afb{} are a signal of
+new physics in \ttbar{} production. In the last few years various
+extensions of the SM have been proposed to explain the excess of the
+measured \afb{}. The following models have been studied in particular
+details by theorists with a focus on their impact on the charge
+asymmetry in \ttbar{} production~\cite{Aguilar-Saavedra:2014kpa}. 
+
+{\em Color-octet vector $G$}. Exchanged in the $s$ channel via
+flavor-diagonal couplings, it gives 
+an amplitude that interferes with the SM gluon-exchange diagram. The
+corresponding contribution to the charge asymmetry in
+$\qqbar{}\to\ttbar{}$ is proportional to the product of axial
+couplings with light and top quarks $g_A^{u,d}g_A^t$. Depending on the
+relative sign of the couplings and on the mass $M_G$, the contribution
+to the asymmetry can be positive or negative. 
+
+{\em Neutral $Z'$ boson}. It contributes to the $\uubar{}\to\ttbar{}$
+process in a neutralflavor changing $t$ channel. A negative asymmetry
+is generated in the leading order interference, therefore higher order
+corrections are required to fit the Tevatron excess. However such
+tuning of the model is disfavored by measurements of other observables.
+
+{\em Charged $W'$ boson}. This gauge boson couples to right-handed
+quarks and contributes in the $t$ channel to the partonic process
+$\ddbar{}\to\ttbar{}$. Larger couplings are needed to compensate the
+lower \ddbar{} luminosity. This field also produces negative
+contributions to the asymmetry and it's disfavored by current measurements.
+
+{\em Scalar isodoublet $\phi$}.
+Exchanged in the $t$ channel with a flavor-changing coupling, it gives
+a positive contribution to the asymmetry via the interference with the
+tree--level process. For small masses, an asymmetry consistent with the
+\afb{} results can be obtained with relatively small couplings.
+
+{\em Color-triplet scalar $\omega$}.
+With charge $4e/3$, it appears only in flavor changing $u$ channel of
+$\uubar{}\to\ttbar{}$. The leading order contribution to the asymmetry
+is negative, so large couplings are required to have large higher
+order corrections. Consequently, cancellations of large leading order
+effects must occur to accomodate current measurements.
+
+{\em Color-sextet scalar $\Omega$}.
+Similar to the $\omega$ above, it also has charge $4e/3$ and therefore
+contributes in the $u$ channel diagram. However, with a positive
+asymmetry, it can easily fit the experimental results.
+
+In all the models, the mass of the new particle and the couplings are
+free parameters which can be tuned to generate asymmetries of
+different size. The range of allowed \ac{} and \afb{} values for each
+new physics model are shown in Fig.~\ref{fig:bsmmodels}. Depending on
+the features of the model, the asymmetries show different dependence
+on the \ttbar{} invariant mass. Therefore experimental input on this
+dependence in data is valuable for model discrimination. 
+
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[width=0.495\textwidth]{figures/theory/bsm} 
+  \includegraphics[width=0.495\textwidth]{figures/theory/bsm_highmtt} 
+  \caption{Allowed regions for the new physics contributions to the FB
+    asymmetry at Tevatron and the inclusive charge asymmetry at LHC
+    (left) and for $\mtt{}>600 \GeV$~\cite{AguilarSaavedra:2011hz}.}
+  \label{fig:bsmmodels}
+\end{figure}
+
+
