fix typos and grammar

--- a/tex/theory.tex
+++ b/tex/theory.tex
@@ -1,4 +1,4 @@
-\chapter{The top charge asymmetry in theory and experiments}
+\chapter{The top charge asymmetry in theory and experimental results}
 \label{sec:theory}
 
 \section{The Standard Model}
@@ -80,7 +80,7 @@ The Higgs field
 needs to be introduced in
 the $SU(2)\times{}U(1)$ theory in order to account for the
 non-vanishing masses of $W$ and $Z$ bosons and of lepton and quarks.
-The Higgs boson does not interact with the gluon and the photon,
+The Higgs boson does not interact with the gluon and the photon;
 therefore they are the only two massless particles of the
 SM. Table~\ref{tab:smmasses} summarize the masses of the SM particles.
 
@@ -136,14 +136,14 @@ collided (\ppbar{}), and the Large Hadron Collider (LHC), colliding protons.
 \label{sec:topprod}
 
 At hadron colliders, top quarks are mainly produced in pairs through QCD
-processes. Interactions between the parton constituents of the
+processes. The partons constituents of the
 colliding hadrons (protons or antiprotons) participate in a hard
 scattering process and produce a top quark and an antitop quark. The
 leading production modes are: {\it gluon--gluon fusion} and {\it
   quark--antiquark annihilation}. The leading order Feynman diagrams
 for these two processes are shown in Fig.~\ref{fig:ttbarprod}. The
 following discussion focuses on the top quark pair production in proton
-collisions, however similar considerations apply to the case of
+collisions; however similar considerations apply to the case of
 proton-antiproton collisions.
 
 \begin{figure}[!htb]\centering
@@ -158,7 +158,7 @@ proton-antiproton collisions.
 Due to the composite nature of the proton, most of the
 collisions involve only soft (i.e. long distance) interactions of the
 constituent quarks and gluons. Such interactions cannot be described
-with perturbative QCD, because the expansion parameter $\alpha_s$ is
+with perturbative QCD because the expansion parameter $\alpha_s$ is
 large for small momentum exchange.
 In some collisions, however, in addition to the long distance parton
 interactions, two quarks or two gluons undergo a hard (i.e. short
@@ -238,7 +238,7 @@ $252.89^{+13.30}_{-14.52}$ pb at \eighttev{}, for a top quark mass of
 $172.5 \GeV{}$~\cite{ttxs1,ttxs2,ttxs3,ttxs4,ttxs5,ttxs6,ttxs7}.
  
 Measurements have been performed by both ATLAS and CMS
-collaborations, yielding a combine value of $173.3\pm10.1$ pb at
+collaborations, yielding a combined value of $173.3\pm10.1$ pb at
 \seventev{}~\cite{ATLAS-CONF-2012-134,CMS-PAS-TOP-12-003}. Preliminary
 measurements at \eighttev{} yield $\sigma_{\ttbar{}}=242\pm{}9$ pb
 (ATLAS)~\cite{Aad:2014kva} and $\sigma_{\ttbar{}}=239\pm{}13$ pb
@@ -249,8 +249,8 @@ with the SM predictions above.
 \label{sec:topdecay}
 
 The top quark has an extremely short lifetime of $5\times{}10^{-25}$
-s. Therefore decay occurs before hadronization can take place and the
-decay products carry the whole information about \mbox{4--momentum} and spin
+s. Therefore decay occurs before hadronization can take place, and the
+decay products carry all of the information about \mbox{4--momentum} and spin
 of the original particle.
 The top quark decays in almost all cases via electroweak
 charged current interaction into a $b$ quark and a $W$ boson, which,
@@ -277,7 +277,7 @@ remaining $1/9$ probability.
 \subsection{Properties}
 \label{sec:topprop}
 
-The properties of the top quark have been studied in details at hadron
+The properties of the top quark have been studied in detail at hadron
 collider experiments. The combination of Tevatron and LHC results
 brought the precision on the top mass measurement well below $1 \GeV{}$
 with $m_t=173.3\pm{}0.8 \GeV{}$~\cite{topmass}.
@@ -288,7 +288,7 @@ ATLAS experiment~\cite{Aad:2013uza}.
 Since the top quark does not form bound hadronic states due to its
 short lifetime, it is the only quark whose spin properties, which are usually
 concealed by hadronization, can be measured. The final state
-particles in the decay carry information about the top quark spin,
+particles in the decay carry information about the top quark spin;
 therefore, it's possible to measure the top polarization and the spin
 correlation of the top quark pair. At the current precision, these
 quantities have been found to be compatible with the SM
@@ -299,7 +299,7 @@ predictions~\cite{Aad:2013ksa,Aad:2014pwa,Chatrchyan:2013wua}.
 
 The measurements of the top quark properties listed in
 Sec~\ref{sec:topprop} yield results compatible with SM predictions.
-An different trend appeared to follow the {\it forward-backward}
+A different trend appeared to follow the {\it forward-backward}
 (FB) asymmetry in the production of \ttbar{} pairs in \ppbar{}
 collisions at the Tevatron, The first precise measurements, using half
 of Tevatron dataset, showed large discrepancies between
@@ -325,7 +325,7 @@ At the time when this thesis work began, a discrepancy between
 experimental data and the SM prediction over three standard deviations
 was reported by the CDF collaboration in the measurement of \afb{} at
 high \ttbar{} invariant mass $\mtt{}>450\GeV{}$, using half of the
-total dataset. This anomaly triggered an intense activity, both in
+total dataset. This anomaly triggered a intense activity, both in
 developing new physics models which could explain the anomaly in
 \ttbar{} production, and in calculating more precise and accurate SM
 predictions. The result also motivated studies of the \ttbar{}
@@ -350,18 +350,18 @@ would be the fundamental observable to measure the charge asymmetry in
 \ttbar{} production, but the direction of the incoming quark is
 not directly accessible at experiments. However, at Tevatron \ppbar{}
 collisions, the quark is provided by the proton with very high
-probability ($\gtrsim{}99\%$ at $\sqrt{s}=1.96\TeV{}$), therefore the
+probability ($\gtrsim{}99\%$ at $\sqrt{s}=1.96\TeV{}$); therefore the
 top quark rapidity $y$ with respect to the proton beam direction can
 be used in Eq.~\ref{eq:afb} to distinguish between {\it forward} and
 {\it backward} production with high efficiency. At LHC $pp$ collisions
 the incoming quark has the same probability to be provided by
-either proton beam, thus the FB asymmetry of Eq.~\ref{eq:afb} vanishes by
+either proton beam; thus the FB asymmetry of Eq.~\ref{eq:afb} vanishes by
 construction. However, valence quarks are more likely to participate
-in the interaction than sea quarks and carry, in average, a larger fraction of
+in the interaction than sea quarks and carry, on average, a larger fraction of
 momentum than sea anti-quarks. Therefore, in the laboratory frame, the
 direction of flight of the \ttbar{} system is likely to be the same as of
 the incoming quark. In this scenario, a forward top quark in
-the \ttbar{} C.M. has in average a larger absolute rapidity $|y|$, in
+the \ttbar{} C.M. has on average a larger absolute rapidity $|y|$, in
 the laboratory frame, than the backward antiquark. Thus the asymmetry
 in Eq.~\ref{eq:ac} allows probing the charge asymmetry in \ttbar{}
 production at the LHC.
@@ -419,7 +419,7 @@ Charge asymmetric contributions also arise from the interference of
 the QCD $\qqbar{}\to{}\ttbar{}$ diagrams in
 Fig.~\ref{fig:asymdiagrams} with the QED analogous where a gluon is
 replaced by a photon. The size of the QED corrections to the QCD
-asymmetric cross section depend on the relative importance of \uubar{}
+asymmetric cross section depends on the relative importance of \uubar{}
 and \ddbar{} annihilations, due to the difference in electric charge.
 At \ppbar{} collisions (Tevatron) the QED contribution is estimated to
 be $\approx{}18\%$, while at LHC $pp$ collisions, with larger relative
@@ -487,8 +487,8 @@ An appealing possibility is that the discrepancies between the
 experimental results and the SM predictions for \afb{} are a signal of
 new physics in \ttbar{} production. In the last few years various
 extensions of the SM have been proposed to explain the excess of the
-measured \afb{}. The following models have been studied in particular
-details by theorists with a focus on their impact on the charge
+measured \afb{}. The following models have been studied in
+detail by theorists with a focus on their impact on the charge
 asymmetry in \ttbar{} production~\cite{Aguilar-Saavedra:2014kpa}. 
 
 {\em Color-octet vector $G$}. Exchanged in the $s$ channel via
@@ -502,7 +502,7 @@ to the asymmetry can be positive or negative.
 
 {\em Neutral $Z'$ boson}. It contributes to the $\uubar{}\to\ttbar{}$
 process in a neutralflavor changing $t$ channel. A negative asymmetry
-is generated in the leading order interference, therefore higher order
+is generated in the leading order interference; therefore higher order
 corrections are required to fit the Tevatron excess. However such
 tuning of the model is disfavored by measurements of other observables.
 
@@ -510,7 +510,7 @@ tuning of the model is disfavored by measurements of other observables.
 quarks and contributes in the $t$ channel to the partonic process
 $\ddbar{}\to\ttbar{}$. Larger couplings are needed to compensate the
 lower \ddbar{} luminosity. This field also produces negative
-contributions to the asymmetry and it's disfavored by current measurements.
+contributions to the asymmetry, and it's disfavored by current measurements.
 
 {\em Scalar isodoublet $\phi$}.
 Exchanged in the $t$ channel with a flavor-changing coupling, it gives
